kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubechart
  labels:
    name: kubechart
